--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "devDependencies": {
     "concurrently": "^5.1.0",
     "prettier": "2.7.1"
+  },
+  "dependencies": {
+    "react-bootstrap-table-next": "^4.0.3"
   }
 }
