--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,16 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^5.2.0",
+    "firebase": "^9.9.2",
+    "firebase-admin": "^11.0.1",
     "graphql": "^14.6.0",
     "jwt-decode": "^2.2.0",
     "react": "^16.14.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "4.0.2"
+    "react-scripts": "4.0.2",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
