--- a/package.json
+++ b/package.json
@@ -16,5 +16,14 @@
   "devDependencies": {
     "concurrently": "^5.1.0",
     "prettier": "2.7.1"
+  },
+  "dependencies": {
+    "apollo-server-core": "^3.10.0",
+    "apollo-server-express": "^3.10.0",
+    "firebase": "^9.9.2",
+    "graphql-upload": "^16.0.1",
+    "multer": "^1.4.5-lts.1",
+    "stream": "^0.0.2",
+    "uuid": "^8.3.2"
   }
 }
