--- a/server/package.json
+++ b/server/package.json
@@ -12,13 +12,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-core": "^3.10.0",
     "apollo-server-express": "^3.6.2",
+    "apollo-upload-client": "^17.0.0",
     "bcrypt": "^4.0.1",
     "express": "^4.17.2",
+    "firebase": "^9.9.2",
     "graphql": "^16.3.0",
+    "graphql-upload": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8",
-    "stripe": "^8.67.0"
+    "multer": "^1.4.5-lts.1",
+    "stream": "^0.0.2",
+    "stripe": "^8.67.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
